---------------------------------------------------------------------------------------------------
Version: 1.3.19
Date: ????
  Changes:

  Locale:
    - Added Spanish translation thanks to Frodo45127.
    - Added Polish translation thanks to wuka.
    - Updated Japanese translation thanks to YAMATO_Hajime.

---------------------------------------------------------------------------------------------------
Version: 1.3.18
Date: 2023-05-20

  Features:
    - Added "Disable milestone notifications" mod setting which turns off chat notifications. This is a player setting, so each player can have it set the way they want.

  Locale:
    - Updated Japanese translation thanks to nojio.

---------------------------------------------------------------------------------------------------
Version: 1.3.17
Date: 2023-04-09

  Bugfixes:
    - Fix remote presets disappearing from the selectable preset list when changing mods in the middle of a game (on configuration changed).
    - Remove duplicated plastic bar milestone from Sea Block presets.

  Locale:
    - Ukrainian translation thanks to Met en Bouldry.
    - Chinese translation update thanks to luaotix.
    - German translation update thanks to knniDE.

---------------------------------------------------------------------------------------------------
Version: 1.3.16
Date: 2023-01-31

  Bugfixes:
    - Fix crash when reaching a milestone near the end of the set, when several milestones are checked per tick.

  Locale:
    - Russian translation update thanks to Shadow_Man.

---------------------------------------------------------------------------------------------------
Version: 1.3.15
Date: 2023-01-28

  Bugfixes:
    - Fix crash caused by milestones for invalid items not being removed if they are in the last position of the set.
    - Fix Bob's Modules preset addon being loaded when using Bob's Enemies instead.

---------------------------------------------------------------------------------------------------