@@ -1,7 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.19
 Date: ????
-  Changes:
+
+  Bugfixes:
+    - Fixed crash when loading a preset with invalid aliases.
 
   Locale:
     - Added Spanish translation thanks to Frodo45127.
